# memo-ai

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  eval-config.json.example  index.html  package-lock.json  package.json  vite.config.ts
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  完整 AI Prompt 流程架构.md  完整产品功能方案.md
docs/design-docs/: acp-integration.md  ai-pipeline.md  core-beliefs.md  index.md
docs/exec-plans/: README.md  tech-debt-tracker.md
docs/plans/: 2026-03-06-asr-pluggable-llm-test-design.md  2026-03-06-frontend-tailwind-migration.md  2026-03-06-frontend-tailwind-redesign.md  2026-03-06-roadmap-design.md  2026-03-07-eval-framework-design.md  2026-03-07-eval-testing-guide.md  (+7 more)
models/: .gitkeep
prompts/: 01_clean.txt  02_speaker.txt  03_structure.txt  04_summary.txt  05_actions.txt  06_report.txt  07_title.txt
schema/: init.sql
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/asr/: aliyun.rs  funasr.rs  mod.rs  provider.rs  qwen3asr.rs  streaming.rs  transcript.rs  whisper.rs
src-tauri/src/audio/: capture.rs  encoder.rs  mod.rs  wasapi.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/eval/: fixture.rs  grader_code.rs  grader_llm.rs  mod.rs  reporter.rs
src-tauri/src/llm/: client.rs  mock_client.rs  mod.rs  ollama.rs  openai.rs  pipeline.rs
src-tauri/src/process/: funasr_server.rs  mod.rs
(+47 files in other folders)
