[package]
name = "memo-ai"
version = "0.1.0"
description = "AI Meeting Copilot"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[lib]
name = "memo_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "memo-ai"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
cpal = "0.15"
hound = "3.5"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
tungstenite = { version = "0.24", features = ["native-tls"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
